# redsoft-task

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/config/: settings.py  urls.py
app/config/components/: database.py  installed_apps.py  rest_framework.py  security.py  static.py
app/mentors/: models.py  password_encryption.py
app/mentors/api/: urls.py
app/mentors/api/v1/: permissions.py  serializers.py  urls.py  views.py
app/mentors/migrations/: 0001_initial.py
